Fix marshalling of arrays of struct pointers to Python

Fill in the pointer to the struct, not the pointer to the
array position. This makes the GdkAtom** argument in
gtk_clipboard_wait_for_targets() work.

https://bugzilla.gnome.org/show_bug.cgi?id=678620